--- a/app/templates/layouts/base-fullscreen.html
+++ b/app/templates/layouts/base-fullscreen.html
@@ -50,7 +50,9 @@
     </script>
     {% block content %}{% endblock content %}
     <button id="themeSwitcher" class="btn btn-sm theme-switcher-btn"><i id="themeIcon" class="fas fa-sun"></i></button>
-    {% include 'includes/sidebar.html' %}
+    {% if request.endpoint not in ['login', 'register', 'register_admin', 'choose_project'] %}
+        {% include 'includes/sidebar.html' %}
+    {% endif %}
     {% include 'includes/scripts.html' %}
     <!-- Specific Page JS goes HERE  -->
     {% block javascripts %}{% endblock javascripts %}
