--- a/app/templates/home/integrations.html
+++ b/app/templates/home/integrations.html
@@ -65,13 +65,14 @@
                                 <img src="/static/assets/img/blog/influxdb.svg" class="card-img-top"
                                     alt="InfluxDB" height="200">
                                 <p style="margin-top: 10px;">{{ influxdb_config.name }}</p>
-                                <a href="/influxdb?influxdb_config={{ influxdb_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/influxdb?influxdb_config={{ influxdb_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/influxdb" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/influxdb.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/influxdb" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
@@ -81,15 +82,16 @@
                             {% for grafana_config in grafana_configs %}
                             <div class="card card-integrations">
                                 <img src="/static/assets/img/blog/grafana.svg" class="card-img-top"
-                                    alt="Grafana" height="200">
+                                    alt="Grafana" height="245">
                                 <p style="margin-top: 10px;">{{ grafana_config.name }}</p>
-                                <a href="/grafana?grafana_config={{ grafana_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/grafana?grafana_config={{ grafana_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/grafana" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/grafana.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/grafana" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
@@ -101,13 +103,14 @@
                                 <img src="/static/assets/img/blog/azure.svg" class="card-img-top"
                                     alt="Azure" height="200">
                                 <p style="margin-top: 10px;">{{ azure_config.name }}</p>
-                                <a href="/azure?azure_config={{ azure_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/azure?azure_config={{ azure_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/azure" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/azure.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/azure" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
@@ -119,13 +122,14 @@
                                 <img src="/static/assets/img/blog/confluence.svg" class="card-img-top"
                                     alt="confl" height="200">
                                 <p style="margin-top: 10px;">{{ atlassian_confluence_config.name }}</p>
-                                <a href="/atlassian-confluence?atlassian_confluence_config={{ atlassian_confluence_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/atlassian-confluence?atlassian_confluence_config={{ atlassian_confluence_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/atlassian-confluence" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/confluence.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/atlassian-confluence" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
@@ -137,13 +141,14 @@
                                 <img src="/static/assets/img/blog/jira.svg" class="card-img-top"
                                     alt="confljira" height="200">
                                 <p style="margin-top: 10px;">{{ atlassian_jira_config.name }}</p>
-                                <a href="/atlassian-jira?atlassian_jira_config={{ atlassian_jira_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/atlassian-jira?atlassian_jira_config={{ atlassian_jira_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/atlassian-jira" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/jira.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/atlassian-jira" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
@@ -155,13 +160,14 @@
                                 <img src="/static/assets/img/blog/mail.svg" class="card-img-top"
                                     alt="smtpmail" height="200">
                                 <p style="margin-top: 10px;">{{ smtp_mail_config.name }}</p>
-                                <a href="/smtp-mail?smtp_mail_config={{ smtp_mail_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/smtp-mail?smtp_mail_config={{ smtp_mail_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/smtp-mail" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/mail.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/smtp-mail" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
@@ -173,13 +179,14 @@
                                 <img src="/static/assets/img/blog/ai_support.svg" class="card-img-top"
                                     alt="aisupport" height="200">
                                 <p style="margin-top: 10px;">{{ ai_support_config.name }}</p>
-                                <a href="/ai-support?ai_support_config={{ ai_support_config.id }}" class="btn btn-primary">Configure</a>
+                                <a href="/ai-support?ai_support_config={{ ai_support_config.id }}" class="btn btn-primary">Edit</a>
                             </div>
                             {% endfor %}
                             <div class="card card-integrations">
-                                <img src="/static/assets/img/blog/new_one.svg" class="card-img-top"
-                                    alt="New" height="245">
-                                <a href="/ai-support" class="btn btn-primary">Add new config</a>
+                                <img src="/static/assets/img/blog/ai_support.svg" class="card-img-top"
+                                    alt="New" height="200">
+                                <p style="margin-top: 10px;">New config</p>
+                                <a href="/ai-support" class="btn btn-primary">Add</a>
                             </div>
                         </div>
                     </div>
