--- a/app/templates/accounts/login.html
+++ b/app/templates/accounts/login.html
@@ -7,7 +7,7 @@
 {% endblock stylesheets %}
 {% block content %}
     <main>
-        <div class="main-background flex-center-center">
+        <div class="main-background flex-center-center fullscreen">
             <div class="signin-inner">
                 <h1>PerForge</h1>
                 <br />
