--- a/app/templates/accounts/register.html
+++ b/app/templates/accounts/register.html
@@ -8,7 +8,7 @@
 {% block content %}
     <main>
         <!-- Section -->
-        <div class="main-background flex-center-center">
+        <div class="main-background flex-center-center fullscreen">
             <div class="signin-inner">
                 <h1>PerForge</h1>
                 <br />
