--- a/app/templates/home/choose-project.html
+++ b/app/templates/home/choose-project.html
@@ -9,7 +9,7 @@
 {% endblock stylesheets %}
 {% block content %}
    <main>
-      <div class="main-background">
+      <div class="main-background fullscreen">
          <div class="min-vh-100 flex-center-center flex-direction-column">
             <div class="center-section">
                <h2 class="mb-2 lh-sm">Choose your project</h2>
